# pyghost

./: .codeclimate.yml  .coverage  .dockerignore  .editorconfig  .pylintrc  .pylintrcold  .travis.yml  CREDITS.md  Dockerfile  Makefile  README.md  check_cc_python_checks.py  coverage.xml  main.py  pepissues.py  pyproject.toml  requirements.txt  run_game.py  setup.cfg
docker-images/simple_alpine/: Dockerfile
pyGhost/: game.py  object_consts.py  player.py  room.py  wall.py
tests/: test_main.py
