[tool.poetry]
name = "pyghost"
version = "0.1.0"
description = ""
authors = ["Agnes Kis <agi.uqbar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
numpy = "^1.22.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "~3.9"
mypy = "0.902"
pytest = "~6.2"
pylint = "^2.13.9"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
